--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body { font-family: sans-serif; margin: 0; padding: 0; }
     #map { height: 50vh; }
-    textarea, input, button { width: 90%; margin: 10px auto; display: block; }
+    textarea, input, button, select { width: 90%; margin: 10px auto; display: block; }
     #output { white-space: pre-wrap; padding: 10px; }
   </style>
 </head>
@@ -17,14 +17,19 @@
   <textarea id="addresses" rows="6">Gijón, Costa\nAvilés, Industrial\nMadrid, Centro\nBarcelona, Este</textarea>
   <input type="text" id="zoneFilter" placeholder="Filtrar por zona (opcional)" />
   <button onclick="processDeliveries()">Calcular y mostrar rutas</button>
+  <select id="addressSelector" onchange="goToSelectedAddress()">
+    <option value="">📍 Selecciona una dirección</option>
+  </select>
   <div id="output"></div>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script>
-    let map = L.map('map').setView([43.36, -5.85], 6); // Asturias
+    let map = L.map('map').setView([43.36, -5.85], 6);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+    let origin = null;
+    let addressData = [];
 
     async function geocode(address) {
       const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`;
@@ -34,13 +39,16 @@
     }
 
     async function processDeliveries() {
+      map.eachLayer(layer => { if (layer instanceof L.Marker || layer instanceof L.Routing.Control) map.removeLayer(layer); });
+      addressData = [];
+      document.getElementById("addressSelector").innerHTML = '<option value="">📍 Selecciona una dirección</option>';
       const raw = document.getElementById("addresses").value.trim().split("\n");
       const zoneFilter = document.getElementById("zoneFilter").value.trim().toLowerCase();
       const output = document.getElementById("output");
       output.textContent = "⏳ Calculando...\n";
 
       navigator.geolocation.getCurrentPosition(async pos => {
-        const origin = [pos.coords.latitude, pos.coords.longitude];
+        origin = [pos.coords.latitude, pos.coords.longitude];
         map.setView(origin, 7);
         L.marker(origin).addTo(map).bindPopup("📍 Tu ubicación").openPopup();
 
@@ -52,7 +60,15 @@
             const coords = await geocode(address);
             if (coords) {
               const dist = map.distance(origin, coords) / 1000;
-              results.push({ address, zone, coords, dist: dist.toFixed(2), time: (dist / 60).toFixed(2) });
+              const info = { address, zone, coords, dist: dist.toFixed(2), time: (dist / 60).toFixed(2) };
+              results.push(info);
+              addressData.push(info);
+              const marker = L.marker(coords).addTo(map).bindPopup(`${address}<br><b>Zona:</b> ${zone}`);
+              marker._zone = zone;
+              const option = document.createElement("option");
+              option.value = address;
+              option.textContent = `${address} (${zone})`;
+              document.getElementById("addressSelector").appendChild(option);
             }
           }
         }
@@ -61,7 +77,6 @@
         output.textContent = results.map(r => `${r.address} (${r.zone}): ${r.dist} km, ${r.time} h`).join("\n");
 
         results.forEach(r => {
-          L.marker(r.coords).addTo(map).bindPopup(`${r.address}`);
           L.Routing.control({
             waypoints: [L.latLng(origin), L.latLng(r.coords)],
             createMarker: () => null,
@@ -71,6 +86,22 @@
           }).addTo(map);
         });
       });
+    }
+
+    function goToSelectedAddress() {
+      const selected = document.getElementById("addressSelector").value;
+      const found = addressData.find(a => a.address === selected);
+      if (found) {
+        map.setView(found.coords, 12);
+        L.popup().setLatLng(found.coords).setContent(`${found.address}<br><b>Zona:</b> ${found.zone}`).openOn(map);
+        L.Routing.control({
+          waypoints: [L.latLng(origin), L.latLng(found.coords)],
+          createMarker: () => null,
+          addWaypoints: false,
+          routeWhileDragging: false,
+          show: false
+        }).addTo(map);
+      }
     }
   </script>
 </body>
