--- a/index.html
+++ b/index.html
@@ -6,22 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; }
+    body { font-family: sans-serif; margin: 0; padding: 0; background: #f4f4f4; }
+    #controls { background: #fff; padding: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     #map { height: 50vh; }
-    textarea, input, button, select { width: 90%; margin: 10px auto; display: block; }
-    #output { white-space: pre-wrap; padding: 10px; }
+    textarea, select, button { width: 100%; margin: 10px 0; padding: 8px; font-size: 1em; }
+    #output { white-space: pre-wrap; padding: 10px; background: #fff; margin-top: 10px; }
+    .marker-label {
+      background-color: white;
+      border-radius: 50%;
+      padding: 4px 8px;
+      font-weight: bold;
+      border: 2px solid black;
+    }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">📦 Organizador de Entregas</h2>
-  <textarea id="addresses" rows="6">Gijón, Costa\nAvilés, Industrial\nMadrid, Centro\nBarcelona, Este</textarea>
-  <input type="text" id="zoneFilter" placeholder="Filtrar por zona (opcional)" />
-  <button onclick="processDeliveries()">Calcular y mostrar rutas</button>
-  <select id="addressSelector" onchange="goToSelectedAddress()">
-    <option value="">📍 Selecciona una dirección</option>
-  </select>
-  <div id="output"></div>
+  <div id="controls">
+    <h2>📦 Organizador de Entregas</h2>
+    <label>📋 Lista de direcciones (una por línea, formato: dirección, zona):</label>
+    <textarea id="addresses" rows="6">Calle Uría 25, Oviedo, Centro\nAvenida de Galicia 12, Avilés, Industrial\nCalle Marqués de San Esteban 8, Gijón, Costa</textarea>
+
+    <label>🏷️ Filtrar por zona:</label>
+    <select id="zoneFilter">
+      <option value="">Todas las zonas</option>
+    </select>
+
+    <label>📍 Navegar a una dirección:</label>
+    <select id="addressSelector">
+      <option value="">Selecciona una dirección</option>
+    </select>
+
+    <button onclick="processDeliveries()">🚀 Calcular rutas</button>
+  </div>
+
   <div id="map"></div>
+  <div id="output"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
@@ -31,6 +50,16 @@
     let origin = null;
     let addressData = [];
 
+    const zoneColors = {
+      "Costa": "blue",
+      "Centro": "green",
+      "Industrial": "red",
+      "Montaña": "brown",
+      "Interior": "orange",
+      "Occidente": "purple",
+      "Este": "pink"
+    };
+
     async function geocode(address) {
       const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`;
       const res = await fetch(url);
@@ -39,11 +68,14 @@
     }
 
     async function processDeliveries() {
-      map.eachLayer(layer => { if (layer instanceof L.Marker || layer instanceof L.Routing.Control) map.removeLayer(layer); });
+      map.eachLayer(layer => {
+        if (layer instanceof L.Marker || layer instanceof L.Routing.Control) map.removeLayer(layer);
+      });
       addressData = [];
-      document.getElementById("addressSelector").innerHTML = '<option value="">📍 Selecciona una dirección</option>';
+      document.getElementById("addressSelector").innerHTML = '<option value="">Selecciona una dirección</option>';
+      document.getElementById("zoneFilter").innerHTML = '<option value="">Todas las zonas</option>';
       const raw = document.getElementById("addresses").value.trim().split("\n");
-      const zoneFilter = document.getElementById("zoneFilter").value.trim().toLowerCase();
+      const zonesSet = new Set();
       const output = document.getElementById("output");
       output.textContent = "⏳ Calculando...\n";
 
@@ -53,30 +85,52 @@
         L.marker(origin).addTo(map).bindPopup("📍 Tu ubicación").openPopup();
 
         let results = [];
+        let count = 1;
         for (let line of raw) {
-          if (line.includes(",")) {
-            const [address, zone] = line.split(",").map(s => s.trim());
-            if (zoneFilter && zone.toLowerCase() !== zoneFilter) continue;
+          const parts = line.split(",");
+          if (parts.length >= 2) {
+            const address = parts.slice(0, -1).join(",").trim();
+            const zone = parts[parts.length - 1].trim();
+            zonesSet.add(zone);
             const coords = await geocode(address);
             if (coords) {
               const dist = map.distance(origin, coords) / 1000;
-              const info = { address, zone, coords, dist: dist.toFixed(2), time: (dist / 60).toFixed(2) };
+              const info = { address, zone, coords, dist: dist.toFixed(2), time: (dist / 60).toFixed(2), index: count++ };
               results.push(info);
               addressData.push(info);
-              const marker = L.marker(coords).addTo(map).bindPopup(`${address}<br><b>Zona:</b> ${zone}`);
-              marker._zone = zone;
+
+              const color = zoneColors[zone] || "gray";
+              const icon = L.divIcon({
+                className: "marker-label",
+                html: `<div style="background:${color};color:white;border-radius:50%;padding:4px 8px;">${info.index}</div>`,
+                iconSize: [30, 30],
+                iconAnchor: [15, 15]
+              });
+
+              L.marker(coords, { icon }).addTo(map).bindPopup(`${info.index}. ${address}<br><b>Zona:</b> ${zone}`);
+
               const option = document.createElement("option");
               option.value = address;
-              option.textContent = `${address} (${zone})`;
+              option.textContent = `${info.index}. ${address} (${zone})`;
               document.getElementById("addressSelector").appendChild(option);
             }
           }
         }
 
-        results.sort((a, b) => b.dist - a.dist);
-        output.textContent = results.map(r => `${r.address} (${r.zone}): ${r.dist} km, ${r.time} h`).join("\n");
+        zonesSet.forEach(z => {
+          const opt = document.createElement("option");
+          opt.value = z;
+          opt.textContent = z;
+          document.getElementById("zoneFilter").appendChild(opt);
+        });
 
-        results.forEach(r => {
+        const selectedZone = document.getElementById("zoneFilter").value;
+        const filtered = selectedZone ? results.filter(r => r.zone === selectedZone) : results;
+
+        filtered.sort((a, b) => b.dist - a.dist);
+        output.textContent = filtered.map(r => `${r.index}. ${r.address} (${r.zone}): ${r.dist} km, ${r.time} h`).join("\n");
+
+        filtered.forEach(r => {
           L.Routing.control({
             waypoints: [L.latLng(origin), L.latLng(r.coords)],
             createMarker: () => null,
@@ -93,7 +147,7 @@
       const found = addressData.find(a => a.address === selected);
       if (found) {
         map.setView(found.coords, 12);
-        L.popup().setLatLng(found.coords).setContent(`${found.address}<br><b>Zona:</b> ${found.zone}`).openOn(map);
+        L.popup().setLatLng(found.coords).setContent(`${found.index}. ${found.address}<br><b>Zona:</b> ${found.zone}`).openOn(map);
         L.Routing.control({
           waypoints: [L.latLng(origin), L.latLng(found.coords)],
           createMarker: () => null,
@@ -103,6 +157,9 @@
         }).addTo(map);
       }
     }
+
+    document.getElementById("addressSelector").addEventListener("change", goToSelectedAddress);
+    document.getElementById("zoneFilter").addEventListener("change", processDeliveries);
   </script>
 </body>
 </html>
