--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <div id="map"></div>
   <div id="output"></div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOpe72ZN7qzjB_RZ9oxhjCa0V9d_DOss4
-&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOpe72ZN7qzjB_RZ9oxhjCa0V9d_DOss4&libraries=places"></script>
   <script>
     let map, userLocation, directionsService, directionsRenderer;
     const zoneColors = {
